--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -3,5 +3,7 @@
 @import "~bulma";
 @import "~animate.css";
 @import "notie";
-@import 'mabuzki';
+@import '_';
 @import 'navbar';
+@import 'index';
+@import 'article';
